<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">BMI Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="settings">Settings</string>
    <string name="calculate">Calculate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="height">Height (%s)</string>
    <string name="weight">Weight (%s)</string>
    <string name="add_user">Add User</string>
    <string name="edit">Edit</string>
    

</resources>
